Draft1 complete, 1 appendix left

--- a/thesis_skel/thesis_2009_skel.tex
+++ b/thesis_skel/thesis_2009_skel.tex
@@ -247,6 +247,7 @@
 \include{thesis_appendix_B}
 \include{thesis_appendix_C}
 \include{thesis_appendix_D}
+\include{thesis_appendix_E}
 % \printbibliography[heading=subbibliography]
 
 %------------------------------------------------------------------------------
