--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -613,7 +613,7 @@ A two-dimensional plot with the Fisher values on an event by event basis vs the 
     \multirow{2}{*}{\shortstack{Fisher Discrim.\\ $\mathcal{F}$}} & \multicolumn{5}{c|}{$\sum_{i=1}^{4} C_i AoP_i$} \\
        & \multicolumn{5}{c|}{i = number of first T5 triggered stations} \\ 
     \hline
-    ($\theta, \mathcal{F}_{\text{cut}}$) &(60, 7.772) & (63, 6.613) & (66, 5.408) & (69, 4.180) & (73.5, 4.357) \\
+    ($\theta, \mathcal{F}_{\text{cut}}$) &(60$^{\circ}$, 7.772) & (63$^{\circ}$, 6.613) & (66$^{\circ}$, 5.408) & (69$^{\circ}$, 4.180) & (73.5$^{\circ}$, 4.357) \\
     \hline
   \end{tabular}
   \caption{Summary of the selection procedure along with the $\mathcal{F}_{\text{cut}}$ values for the different angular sub-regions.}
