--- a/thesis_skel/thesis_follow.tex
+++ b/thesis_skel/thesis_follow.tex
@@ -1,7 +1,7 @@
 % !TEX root = mythesis.tex
 
 %==============================================================================
-\chapter{Source follow-up analysis}
+\chapter{Search for point-like sources of UHE$\nu_s$ in the DG$_{\text{low}}$ range}
 \label{chap:follow-up}
 %==============================================================================
 
@@ -9,7 +9,7 @@ One of the most exciting fields of modern day neutrino astrophysics involves sca
 
 In this chapter, the point source sensitivity to $\nu$ events of the SD array is discussed for the zenith angular range explored in this thesis, DG$_{\text{low}}$. Based on the zero neutrino candidates found in the search performed in this work a source declination, $\delta$ dependent neutrino flux is calculated. This process includes calculating the declination dependent exposure and then converting it to a limit on the flux. The improvements to this exposure and sensitivity by the inclusion of new triggers is also discussed. Finally, the new limit is used to scan a few interesting sources which lie in the most sensitive range for the DG$_{\text{low}}$ region.
 
-\section{Procedure for point source analysis}
+\section{Procedure to look for a point like steady source of UHE$\nu_s$}
 \label{sec:procedure_point_source}
 
 \subsection{Source visibility}
@@ -85,7 +85,7 @@ The exposure is $\delta$ dependent due to the dependence of effective area on $\
 
 % As it can be seen in~\cite{} ES exposure published in~\cite{} is also plotted for comparison. It can be seen that generally the DG$_{low}$ point source exposure is lower than that of ES expect at higher energies where it is comparable. At these energies the different sensitive zenith angle ranges between the channels are the only differentiating factors for the exposure distribution. 
 
-\section{Point-source neutrino flux limit}
+\section{Flux limits for point-like sources of UHE$\nu_s$}
 \label{sec:pfux_limit}
 Since no neutrino candidate was discovered in the search window an upper limit to a  point-like source of UHE neutrinos can be calculated. Similar to the calculation for the diffuse flux the number of expected neutrino events from a point like source at a given declination can be written as:
 
