--- a/thesis_skel/thesis_setup.tex
+++ b/thesis_skel/thesis_setup.tex
@@ -230,8 +230,8 @@ In the context of this thesis, the data from the ongoing upgrade and the precedi
   \label{fig:T5_config}
 \end{figure}
 
-% \section{The \texorpdfstring{$\overline{\text{Off}} \underline{\text{line}}$}{} Framework}
-% \label{sec:Offline}
+\section{The \texorpdfstring{$\overline{\text{Off}} \underline{\text{line}}$}{} Framework}
+\label{sec:Offline}
 
 The $\mathrm{\overline{Off} \underline{line}}$ framework~\cite{Argiro:2007qg,PierreAuger:2023cqe} is the C++ based software developed internally by the Pierre Auger Observatory to reconstruct air showers and perform cosmic ray analysis. It can process and reconstruct both air shower simulation outputs from generators such as CORSIKA~\cite{Heck:1998vt}, Aires~\cite{Sciutto:1999jh} etc. and the data recorded at the Observatory. $\mathrm{\overline{Off} \underline{line}}$ aims to standardize basic quantities such as detector response for simulations and important variables inferred from reconstructing an EAS for the entire collaboration. This helps in providing the collaboration with a homogenous backbone to build physics analysis. It also allows for the physics analysis to be stored and implemented within the framework which helps in leading and optimising productivity. The modular design allows it to be constantly updated for the addition of new functionality and detectors. The framework is available internally on GitLab to the entire Collaboration with regularly planned public releases. $\mathrm{\overline{Off} \underline{line}}$ consists of three fundamental constituents as shown in Fig.~\ref{fig:Offline_schematic}. These are summarised below:
 
